<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.lambda.framework</groupId>
	<artifactId>lambda-framework</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>lambda-framework</name>
	<description>lambda framework</description>
	<url>https://github.com/MrWangGang</url>
	<licenses>
		<license>
			<name>The Apache Software License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
		</license>
	</licenses>
	<developers>
		<developer>
			<name>王刚</name>
			<email>userbean@outlook.com</email>
		</developer>
	</developers>
	<scm>
		<connection>scm:git:git@github.com/MrWangGang/lambda-framework.git</connection>
		<developerConnection>scm:git:git@github.com/MrWangGang/lambda-framework.git</developerConnection>
		<url>git@github.com/MrWangGang/lambda-framework.git</url>
	</scm>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
        <version>3.3.0</version>
		<relativePath/> <!-- lookup parent from repository -->
		<!--
			Alpha：内测版，BUG多，开发人员开发过程中使用，希腊字母α，第一，指最初版
			Beta：早期版本，有缺陷，没有严重BUG，可能加入新功能，进一步开发完善
			Gamma: 经Beta 版，完善修改，成为正式发布的候选版本（Release Candidate）
			RC：(Release Candidate)：候选版本，几乎就是正式版了
			GA：（Ggeneral Availability）：发行稳定版，官方推荐使用此版本
			R，RELEASE：正式版，等价于GA
		-->
	</parent>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>21</java.version>
		<spring-cloud.version>2023.0.2</spring-cloud.version>
		<spring-cloud-alibaba.version>2023.0.1.0</spring-cloud-alibaba.version>
		<openai-service.version>0.12.0</openai-service.version>
		<guava.version>31.1-jre</guava.version>
		<jtokkit.version>0.4.0</jtokkit.version>
		<javax.el-api.version>3.0.1-b06</javax.el-api.version>
		<javax.el.version>2.2.6</javax.el.version>
		<validation-api.version>2.0.1.Final</validation-api.version>
		<commons-lang3.version>3.12.0</commons-lang3.version>
		<commons-beanutils.version>1.9.4</commons-beanutils.version>
		<r2dbc-mysql.version>1.0.1</r2dbc-mysql.version>
		<r2dbc-pool.version>1.0.0.RELEASE</r2dbc-pool.version>
		<jackson-datatype-jsr310.version>2.14.2</jackson-datatype-jsr310.version>
		<commons-beanutils.version>1.9.4</commons-beanutils.version>
		<lombok.version>1.18.30</lombok.version>
		<redisson.version>3.30.0</redisson.version>
		<curator.version>5.6.0</curator.version>
		<copiers.version>2.5.4</copiers.version>
	</properties>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-dependencies</artifactId>
				<version>${spring-cloud.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>com.alibaba.cloud</groupId>
				<artifactId>spring-cloud-alibaba-dependencies</artifactId>
				<version>${spring-cloud-alibaba.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>commons-beanutils</groupId>
				<artifactId>commons-beanutils</artifactId>
				<version>${commons-beanutils.version}</version>
			</dependency>
			<dependency>
				<groupId>org.lambda.framework</groupId>
				<artifactId>lambda-framework-common</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.lambda.framework</groupId>
				<artifactId>lambda-framework-guid</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.lambda.framework</groupId>
				<artifactId>lambda-framework-openai</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.lambda.framework</groupId>
				<artifactId>lambda-framework-rpc</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.lambda.framework</groupId>
				<artifactId>lambda-framework-redis</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.lambda.framework</groupId>
				<artifactId>lambda-framework-web</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.lambda.framework</groupId>
				<artifactId>lambda-framework-rsocket</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.lambda.framework</groupId>
				<artifactId>lambda-framework-gateway</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.lambda.framework</groupId>
				<artifactId>lambda-framework-nacos</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.lambda.framework</groupId>
				<artifactId>lambda-framework-loadbalance</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.lambda.framework</groupId>
				<artifactId>lambda-framework-security</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.lambda.framework</groupId>
				<artifactId>lambda-framework-repository</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.lambda.framework</groupId>
				<artifactId>lambda-framework-httpclient</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.lambda.framework</groupId>
				<artifactId>lambda-framework-compliance</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.lambda.framework</groupId>
				<artifactId>lambda-framework-lock</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.theokanning.openai-gpt3-java</groupId>
				<artifactId>service</artifactId>
				<version>${openai-service.version}</version>
			</dependency>
			<dependency>
				<groupId>com.knuddels</groupId>
				<artifactId>jtokkit</artifactId>
				<version>${jtokkit.version}</version>
			</dependency>
			<dependency>
				<groupId>javax.el</groupId>
				<artifactId>javax.el-api</artifactId>
				<version>${javax.el-api.version}</version>
			</dependency>
			<dependency>
				<groupId>org.glassfish.web</groupId>
				<artifactId>javax.el</artifactId>
				<version>${javax.el.version}</version>
			</dependency>
			<dependency>
				<groupId>javax.validation</groupId>
				<artifactId>validation-api</artifactId>
				<version>${validation-api.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-lang3</artifactId>
				<version>${commons-lang3.version}</version>
			</dependency>
			<dependency>
				<groupId>commons-beanutils</groupId>
				<artifactId>commons-beanutils</artifactId>
				<version>${commons-beanutils.version}</version>
			</dependency>
			<dependency>
				<groupId>com.google.guava</groupId>
				<artifactId>guava</artifactId>
				<version>${guava.version}</version>
			</dependency>
			<dependency>
				<groupId>io.asyncer</groupId>
				<artifactId>r2dbc-mysql</artifactId>
				<version>${r2dbc-mysql.version}</version>
			</dependency>
			<dependency>
				<groupId>io.r2dbc</groupId>
				<artifactId>r2dbc-pool</artifactId>
				<version>${r2dbc-pool.version}</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.datatype</groupId>
				<artifactId>jackson-datatype-jsr310</artifactId>
				<version>${jackson-datatype-jsr310.version}</version>
			</dependency>
			<dependency>
				<groupId>cn.hutool</groupId>
				<artifactId>hutool-core</artifactId>
				<version>${hutool-core.version}</version>
			</dependency>
			<dependency>
				<groupId>org.projectlombok</groupId>
				<artifactId>lombok</artifactId>
				<version>${lombok.version}</version>
			</dependency>
			<dependency>
				<groupId>org.redisson</groupId>
				<artifactId>redisson</artifactId>
				<version>${redisson.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.curator</groupId>
				<artifactId>curator-recipes</artifactId>
				<version>${curator.version}</version>
			</dependency>
			<dependency>
				<groupId>com.github.drtrang</groupId>
				<artifactId>copiers</artifactId>
				<version>${copiers.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<dependencies>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
		</dependency>
	</dependencies>

	<modules>
		<module>lambda-framework-common</module>
		<module>lambda-framework-web</module>
		<module>lambda-framework-rsocket</module>
		<module>lambda-framework-rpc</module>
		<module>lambda-framework-gateway</module>
		<module>lambda-framework-nacos</module>
		<module>lambda-framework-loadbalance</module>
		<module>lambda-framework-httpclient</module>
		<module>lambda-framework-security</module>
		<module>lambda-framework-guid</module>
		<module>lambda-framework-redis</module>
		<module>lambda-framework-repository</module>
		<module>lambda-framework-openai</module>
		<module>lambda-framework-compliance</module>
		<module>lambda-framework-lock</module>
	</modules>

	<distributionManagement>
		<repository>
			<id>rdc-releases</id>
			<url>https://658b83c54ae926de53a23fc0:pZhZbJ8CnqX7@packages.aliyun.com/maven/repository/2444343-release-fxeBn3/</url>
			<uniqueVersion>false</uniqueVersion>
			<layout>default</layout>
			<releases>
				<enabled>true</enabled>
				<updatePolicy>always</updatePolicy>
			</releases>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
		<snapshotRepository>
			<id>rdc-snapshots</id>
			<url>https://658b83c54ae926de53a23fc0:pZhZbJ8CnqX7@packages.aliyun.com/maven/repository/2444343-snapshot-UpImCt/</url>
			<uniqueVersion>false</uniqueVersion>
			<layout>default</layout>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
				<updatePolicy>always</updatePolicy>
			</snapshots>
		</snapshotRepository>
	</distributionManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-deploy-plugin</artifactId>
				<version>3.1.1</version>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>versions-maven-plugin</artifactId>
				<version>2.3</version>
				<configuration>
					<generateBackupPoms>false</generateBackupPoms>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
